[package]
name = "wasm-websocket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = [
"RtcPeerConnection",
"RtcConfiguration",
"RtcPeerConnectionIceEvent", 
"RtcSessionDescriptionInit", 
"RtcIceCandidate",
"RtcIceCandidateInit",
"WebSocket", 
"BinaryType", 
"MessageEvent", 
"ErrorEvent",
"console"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.48"
once_cell = "1.18.0"
serde_json = "1.0"