[package]
name = "wasm-websocket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = [
"RtcSdpType",
"RtcPeerConnection",
"RtcPeerConnectionAddTrack",
"RtcConfiguration",
"RtcPeerConnectionIceEvent",
"RtcSessionDescriptionInit",
"RtcRtpTransceiverInit",
"RtcRtpTransceiver", 
"RtcIceCandidate",
"RtcIceCandidateInit",
"WebSocket", 
"BinaryType", 
"MessageEvent", 
"ErrorEvent",
"console",
"Window",
"Document",
"MediaStream",
"MediaStreamTrack",
"MediaStreamConstraints",
"HtmlVideoElement",
"MediaDevices",
"Navigator"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.48"
serde_json = "1.0"
serde-wasm-bindgen = "0.5"